# stochos

./: Cargo.toml  README.md  shell.nix
src/: app.rs  config.rs  input.rs  main.rs  overlay.rs  render.rs  runtime.rs
src/backend/: mod.rs  wayland.rs  x11.rs
src/mode/: normal.rs  recording.rs
