[package]
name = "stochos"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[features]
default = ["wayland", "x11"]
wayland = ["dep:wayland-client", "dep:wayland-protocols-wlr", "dep:tempfile"]
x11 = ["dep:x11rb"]

[dependencies]
anyhow = "1.0"
wayland-client = { version = "0.31", optional = true }
wayland-protocols-wlr = { version = "0.3", features = ["client"], optional = true }
tempfile = { version = "3", optional = true }
x11rb = { version = "0.13", features = ["xtest"], optional = true }
font8x8 = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
